--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body{
     align-items: center;
     align-content: center;
     width: 100%;
+ 
 }
 
 .container{
@@ -54,6 +55,7 @@ header h1{
     align-items: center;
     align-content: center;
     width: 375px;
+    height: 100vh;
     background-color: #FAFAFA;
 }
 
